# spa-server

./: Cargo.toml  README.md
patch_cors/: .cargo_vcs_info.json  Cargo.toml
patch_cors/src/: builder.rs  middleware.rs
patch_identity/: Cargo.toml  Cargo.toml.orig
patch_identity/src/: lib.rs
spa-server-derive/: Cargo.toml
spa-server-derive/src/: embed.rs  lib.rs  route.rs  utils.rs
src/: lib.rs
