[package]
authors = ["raven <wu_bin3@dahuatech.com>"]
edition = "2018"
name = "spa-server-derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
walkdir = "2.3"
