[package]
authors = ["raven <avalon1610@gmail.com>"]
edition = "2018"
name = "spa-server-derive"
version = "0.1.0"
repository  = "https://github.com/avalon1610/spa-server.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
walkdir = "2.3"
